# angharad

./: .gitignore  .gitmodules  API.md  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  _config.yml  angharad-init  angharad.c  angharad.conf.sample  angharad.h  angharad.mariadb.sql  angharad.service  angharad.sqlite3.sql  authentication.c  condition.c  event.c  glewlwyd_resource.c  index.html  index.md  md5.c  params.json  profile.c  scheduler.c  script.c  trigger.c  unit-tests.c  user.c  webservice.c
.github/workflows/: codeql-analysis.yml  main.yml
cmake-modules/: FindLibMPDClient.cmake  FindOpenZWAVE.cmake
docs/: API.md  INSTALL.md  angharad-init  angharad.conf.sample  angharad.mariadb.sql  angharad.service  angharad.sqlite3.sql
src/: Makefile  angharad.c  angharad.h  condition.c  glewlwyd_resource.c  profile.c  scheduler.c  script.c  static_file_callback.c  trigger.c  unit-tests.c  webservice.c
src/benoic/: Makefile  README.md  benoic-standalone.c  benoic.c  benoic.h  device-element.c  device.c
src/benoic/device-modules/: Makefile  README.md  device-esp8266.c  device-mock.c  device-taulas.c  device-zwave.cpp
src/benoic/docs/: API.md  benoic.conf.sample  benoic.mariadb.sql  benoic.sqlite3.sql
src/carleon/: Makefile  README.md  carleon-standalone.c  carleon.c  carleon.h  service.c
src/carleon/docs/: API.md  API.mock.md  API.motion.md  API.mpd.md  carleon.conf.sample  carleon.mariadb.sql  carleon.sqlite3.sql  service-liquidsoap.mariadb.sql  service-liquidsoap.sqlite3.sql  service-mock.mariadb.sql  service-mock.sqlite3.sql  service-motion.mariadb.sql  service-motion.sqlite3.sql  service-mpd.mariadb.sql  service-mpd.sqlite3.sql
src/carleon/service-modules/: Makefile  README.md  service-liquidsoap.c  service-mock.c  service-motion.c  service-mpd.c  service-weathermap.c
src/gareth/: Makefile  README.md  alert.c  filter.c  gareth-standalone.c  gareth.c  gareth.h  message.c
src/gareth/docs/: API.md  gareth.conf.sample  gareth.mariadb.sql  gareth.sqlite3.sql
test/: Makefile  angharad-ci.conf  angharad_profile.c  angharad_scheduler.c  angharad_scheduler_trigger_exec.c  angharad_script.c  angharad_submodule.c  angharad_trigger.c  benoic_device.c  benoic_device_element.c  benoic_monitor.c  carleon_liquidsoap.c  carleon_motion.c  carleon_mpd.c  carleon_service.c  gareth_alert_http.c  gareth_alert_smtp.c  gareth_filter.c  gareth_message.c  gareth_trigger.c  test-service.c  unit-tests.c  unit-tests.h
webapp/: bundle.js  bundle.js.LICENSE.txt  config.json.sample  index.html  index.less
webapp-src/: .gitignore  LICENSE  Makefile  README.md  bower.json  config.js  constants.js.sample  gulpfile.js  karma.conf.js  package.json  protractor.conf.js  webpack.config.js
webapp-src/e2e/: main.po.js  main.spec.js
webapp-src/src/: index.html  index.js
webapp-src/src/Angharad/: App.js  Blind.js  Blinds.js  ComponentAdminButtons.js  Components.js  Config.js  Confirm.js  ConnectButton.js  Dimmer.js  Dimmers.js  LangDropdown.js  Map.js  MapAdminButtons.js  MapContainer.js  MapMpdServiceButton.js  MapPlace.js  MapWeathermapServiceButton.js  MockService.js  MockServices.js  ModalBlind.js  ModalConfirm.js  ModalDevice.js  ModalDimmer.js  ModalElement.js  ModalMap.js  ModalMonitor.js  ModalOpenService.js  ModalScheduler.js  ModalSchedulerShow.js  ModalScript.js  ModalService.js  MpdService.js  MpdServices.js  RoundPercent.js  Scheduler.js  Schedulers.js  Script.js  ScriptSchedAdminButtons.js  Scripts.js  Sensor.js  (+9 more)
webapp-src/src/app/: app.js  route.js
webapp-src/src/app/dashboard/: dashboard.controller.js  dashboard.html  dashboard.less
webapp-src/src/app/error/: error.controller.js  error.html
webapp-src/src/app/events/: events.controller.js  events.html
webapp-src/src/app/heaters/: heaters.controller.js  heaters.html
webapp-src/src/app/logs/: filters.modal.html  filters.modal.js  logs.controller.js  logs.html
webapp-src/src/app/monitors/: monitors.controller.js  monitors.html
webapp-src/src/app/parameters/: parameters.controller.js  parameters.html
webapp-src/src/app/scripts/: scripts.controller.js  scripts.html
webapp-src/src/lib/: APIManager.js  Notification.js  OIDCConnector.js  Storage.js
webapp/app/: config.js.sample
webapp/app/dashboard/: dashboard.less
webapp/app/login/: login.html
webapp/app/parameters/: parameters.less
webapp/app/scripts/: scripts.less
webapp/app/service/: service.less
webapp/components/container/: container.less
webapp/components/dimmer/: dimmer.less
webapp/components/gridStack/: gridstack.less
webapp/components/heater/: heater.less
webapp/components/script/: script.less
webapp/components/topLeftMenu/: topLeftMenu.less
webapp/components/topRightMenu/: topRightMenu.less
webapp/css/: angharad.css  circular-button.css
webapp/locales/en/: translations.json
webapp/locales/fr/: translations.json
webapp/maps/scripts/: app-1060ac2682.js.map  app-188980dcbc.js.map  app-52128775ca.js.map  app-5d7ad0693c.js.map  app-7d58e2d81a.js.map  app-87faaee1a6.js.map  app-898ab3c347.js.map  app-95752babac.js.map  app-9ca25e04d7.js.map  app-c1b58d57c9.js.map  app-ce64ee4326.js.map  app-ce89aa9405.js.map  app-d2e96dfd83.js.map  app-f0ce9ebb3e.js.map  app-fc58263f5e.js.map
webapp/maps/styles/: app-031039e1a3.css.map  app-28d04900a0.css.map  app-31cf7dfb43.css.map  app-7d2e470a70.css.map  app-996bcd5a0c.css.map  app-d6012ff2cd.css.map  app-dc34c67cc3.css.map  app-ee45bd301e.css.map  vendor-89b8ce3f2a.css.map
webapp/scripts/: app-1060ac2682.js  app-188980dcbc.js  app-52128775ca.js  app-5d7ad0693c.js  app-7d58e2d81a.js  app-87faaee1a6.js  app-898ab3c347.js  app-95752babac.js  app-9ca25e04d7.js  app-c1b58d57c9.js  app-ce64ee4326.js  app-ce89aa9405.js  app-d2e96dfd83.js  app-f0ce9ebb3e.js  app-fc58263f5e.js  vendor-1b5d5829fe.js  vendor-68ee81be2f.js  vendor-8d1895d9be.js  vendor-f21c996411.js
webapp/styles/: app-031039e1a3.css  app-28d04900a0.css  app-31cf7dfb43.css  app-7d2e470a70.css  app-996bcd5a0c.css  app-d6012ff2cd.css  app-dc34c67cc3.css  app-ee45bd301e.css  vendor-89b8ce3f2a.css
(+92 files in other folders)
